<resources>
    <string name="app_name">Gz Musical</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id">701803981309122</string>
    <string name="fb_login_protocol_scheme">fb701803981309122</string>
    <string name="facebook_client_token">efa9cd0ffcc533827c283b4b0127c1f0</string>
    <string name="good_morning">Good Morning,</string>

    <string name="welcome_back">Welcome back!</string>
    <string name="promotion">Promotion</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="don_t_worry_enter_your_registered_phone_number_below_to_receive_password_instructions">Don’t worry! Enter your registered phone number below to receive password instructions</string>
    <string name="remember_password">Remember Password ?</string>
    <string name="log_in">Log In</string>
    <string name="confirm">Confirm</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="good_evening">Good Evening,</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="choose_from_maps">Choose from maps</string>
    <string name="saved_address">Saved Address</string>
    <string name="km_away_from_you">Km away from you</string>
    <string name="find_a_store">Find a store</string>
    <string name="don_t_have_connection">Don\'t have connection</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="privacy_police">Privacy Police</string>
    <string name="term_of_service">Term of Service</string>
    <string name="contact_us">Contact Us</string>
    <string name="tell_your_friend">Tell Your Friend</string>
    <string name="log_out">Log out</string>
    <string name="notification">Notification</string>
    <string name="order_detail">Order Detail</string>
    <string name="status">Status</string>
    <string name="order_id">Order ID</string>
    <string name="delivery_method">Delivery Method</string>
    <string name="received_at">Received at</string>
    <string name="delivery_to">Delivery to</string>
    <string name="payment_method">Payment Method</string>
    <string name="note">Note</string>
    <string name="order_info">Order Info</string>
    <string name="your_item_s">Your Item(s)</string>
    <string name="total_price">Total Price</string>
    <string name="prices_includes_8_vat_applicable_from_01_02_2022_to_31_12_2022">* Prices includes 8% VAT, applicable from 01/02/2022 to 31/12/2022</string>
    <string name="cancel">Cancel :(</string>
    <string name="we_ve_sent_a_otp_to">We\'ve sent a OTP to :</string>
    <string name="didn_t_receive">Didn\'t Receive ?</string>
    <string name="resend">Resend</string>
    <string name="delivery">Delivery</string>
    <string name="go_to_store">Go to store</string>
    <string name="Phone_number">Phone Number</string>
    <string name="payment_info">Payment Info</string>
    <string name="pay_23_000_000_vnd">Pay</string>
    <string name="total">Total</string>
    <string name="detail">Detail</string>
    <string name="video">Video</string>
    <string name="comments">Comments</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login_details">Login Details</string>
    <string name="this_will_be_your_username">This will be your username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="personal_details">Personal Details</string>
    <string name="salutations">Salutations</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="we_would_never_want_to_miss_such_a_special_day_your_birthday_cannot_be_changed_after_submission">We would never want to miss such a special day. Your birthday cannot be changed after submission.</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="contact_address">Contact Address</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="phone_number_preferences_and_terms">Phone number preferences and terms</string>
    <string name="i_do_not_wish_to_receive_news_special_offers_and_more_form_gz_musical">I do not wish to receive news, special offers and more form Gz Musical</string>
    <string name="by_clicking_this_button_i_agree_to_the_gz_musical_site">By clicking this button, I agree to the Gz Musical Site</string>
    <string name="join_now">Join now</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="thank_for_giving">Thanks for giving us your precious time. Now you are ready for an enjoyable moment.</string>
    <string name="your_order">Your order</string>
    <string name="amount_detail">Amount Detail</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="pay_now">Pay now</string>
    <string name="write_comment">Write Comment ...</string>
    <string name="portfolio">Portfolio</string>
    <string name="total_order">Total Order</string>
    <string name="total_payment_vnd">Total Payment(VND)</string>
    <string name="have_a_nice_day">Have a nice day</string>
    <string name="for_you">For you</string>
    <string name="news">News</string>
    <string name="sort">Sort</string>
    <string name="your_account_have_been_disable_please_contact_to_0909916020_to_have_more_information">Your account have been disable . Please contact to 0909916020 to have more information</string>
    <string name="gz_musical_sorry_for_this_inconvenience">Gz Musical sorry for this inconvenience</string>


</resources>