<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Activities.ChangePasswordActivity">

    <ImageView
        android:id="@+id/imgLogoForgotPassword"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo_green" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lineHeight="20dp"
        android:text="@string/change_your_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/img_2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipOldPassword"
        android:layout_width="345dp"
        android:visibility="gone"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtOldPassword"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword"
            android:lineHeight="20dp"
            android:lines="1"
            android:maxLength="25"
            android:textColor="#A6000000"
            android:textSize="14dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipNewPassword"
        android:layout_width="345dp"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword"
            android:lineHeight="20dp"
            android:lines="1"
            android:textColor="#A6000000"
            android:textSize="14dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipConfirmNewPassword"
        android:layout_width="345dp"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtConfirmNewPassword"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword"
            android:lineHeight="20dp"
            android:lines="1"
            android:textColor="#A6000000"
            android:textSize="14dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnConfirmPassword"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_button_oval"
        android:lineHeight="20dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>