<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvGreeting"
                android:layout_width="118dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:lineHeight="24dp"
                android:text="@string/good_morning"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/tvGreeting"
                android:src="@drawable/img_hello" />

            <TextView
                android:id="@+id/tvWelcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_below="@id/tvGreeting"
                android:layout_marginStart="20dp"
                android:lineHeight="31.5px"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="21dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="69dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_logo_green" />
            <TextView
                android:id="@+id/tvGzMusical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_below="@+id/tvWelcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="Gz Musical "
                android:textSize="18dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:lineHeight="27dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_below="@+id/tvWelcomeBack"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/tvGzMusical"
                android:lineHeight="27dp"
                android:text="@string/promotion"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="20dp"
                android:id="@+id/vpPromotion"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_below="@id/tvGzMusical" />
            <me.relex.circleindicator.CircleIndicator2
                app:ci_drawable="@drawable/custom_indicator"
                android:id="@+id/ciPromotion"
                android:layout_below="@id/vpPromotion"
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ciPromotion"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:background="@color/white"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tilPhoneNumberLogin"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number">

                    <EditText
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="10"
                        android:id="@+id/edtPhoneNumberLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:lineHeight="20dp"
                        android:textColor="#A6000000"
                        android:textSize="14dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:background="@color/white"
                    android:id="@+id/tilPasswordLogin"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:lines="1"
                        android:id="@+id/edtPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:lineHeight="20dp"
                        android:textColor="#A6000000"
                        android:textSize="14dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="345dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:id="@+id/cbKeepLogged"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="5dp"
                        android:buttonTint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="133dp"
                        android:layout_height="20dp"
                        android:layout_toRightOf="@id/cbKeepLogged"
                        android:lineHeight="20dp"
                        android:text="@string/keep_me_logged_in"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="125dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:lineHeight="20dp"
                        android:text="@string/forgot_password"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14dp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/custom_button_oval"
                    android:lineHeight="20dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:gravity="center"
                    android:layout_marginVertical="20dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp">
                    <View
                        android:layout_width="102dp"
                        android:layout_height="1dp"
                        android:background="#7D000000"
                        />
                    <TextView
                        android:layout_marginHorizontal="20dp"
                        android:textColor="#7D000000"
                        android:layout_width="24dp"
                        android:layout_height="26dp"
                        android:text="@string/or"
                        android:textSize="17dp"
                        android:lineHeight="25.5dp"
                        />
                    <View
                        android:layout_width="102dp"
                        android:layout_height="1dp"
                        android:background="#7D000000"
                        />
                </LinearLayout>
                <ImageView
                    android:id="@+id/btnFbLogin"
                    android:src="@drawable/img_login_with_fb"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    />
                <ImageView
                    android:id="@+id/btnGGLogin"
                    android:src="@drawable/img_login_with_gg"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    />
                <LinearLayout

                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    >
                    <TextView
                        android:textAlignment="center"
                        android:lineHeight="22.5dp"
                        android:layout_width="180dp"
                        android:layout_height="23dp"
                        android:text="@string/don_t_have_an_account"
                        />
                    <TextView
                        android:id="@+id/tvSignUp"
                        android:textSize="15dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="58dp"
                        android:layout_height="23dp"
                        android:text="@string/sign_up"
                        />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
    <TextView
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:id="@+id/tvConnectionLogin"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:background="#80000000"
        android:text="@string/don_t_have_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>